@@ -1694,13 +1694,9 @@ findGrobinChildren <- function(name, children) {
 #   temp <- function() { grid.lines(); grid.rect() }
 #   temp()
 grid.draw <- function(x, recording=TRUE) {
-  UseMethod("grid.draw")
-}
-
-grid.draw.default <- function(x, recording) {
-  # Allow for "holes" in the DL if a grob has been removed
-  if (!is.null(x))
-    stop("invalid element in the display list")
+    # If 'x' is NULL, draw nothing
+    if (!is.null(x))
+        UseMethod("grid.draw")
 }
 
 grid.draw.viewport <- function(x, recording) {
